outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_23-14-52/evaluations/problem_eval1732276171181196024_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (40%) in later stages, and exploration factor (10%) decreases as unvisited nodes decrease to prioritize exploitation. It uses a hybrid scoring approach, minimizing the weighted sum of distances and randomness, and breaks ties by selecting the node with the longer future distance.}
                                                                                                                                                                                                                                                                                                       ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (40%) in later stages, and exploration factor (10%) decreases as unvisited nodes decrease to prioritize exploitation. It uses a hybrid scoring approach, minimizing the weighted sum of distances and randomness, and breaks ties by selecting the node with the longer future distance.}
                                                                                                                                                                                                                                                                                                       ^
SyntaxError: unmatched '}'
